# ROS-basics

./: LICENSE  README.md
robotlab_ws/src/rl_stem_cell/: CMakeLists.txt  package.xml
robotlab_ws/src/rl_stem_cell/launch/: camera.launch  gazebo.launch
robotlab_ws/src/rl_stem_cell/script/: capture.py  move_dot.py
robotlab_ws/src/rl_stem_cell/urdf/: camera.gazebo.xacro  camera.urdf.xacro  sphere.urdf
