<package> 
  <name>rl_stem_cell</name>
  <version>0.2.4</version>

  <description>This package contains stem cells for your project.</description>
  <author>nasma1</author>

  <maintainer email="nasma1@digitus.itk.ppke.hu">nasma1</maintainer>

  <license>BSD</license>  


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
